# movefit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.github/: commit-message-guidelines.md  copilot-instructions.md
.github/agents/: movefit-ci.agent.md  movefit-coordinator.agent.md  movefit-data.agent.md  movefit-db.agent.md  movefit-docs.agent.md  movefit-fastapi.agent.md  movefit-frontend.agent.md  movefit-git.agent.md  movefit-tests.agent.md
.github/instructions/: agent-customization.instructions.md  movefit-python.instructions.md  movefit-tests.instructions.md
.github/prompts/: cleanup-to-main.prompt.md  coordinator-git-change-analysis.prompt.md  fastapi-measurements.prompt.md  frontend-vite-tailwind.prompt.md  interpretation-implications.prompt.md  movefit-coordinator.prompt.md  movefit-data.prompt.md  movefit-db.prompt.md  repo-cleanup.prompt.md
.github/skills/movefit-checks/: SKILL.md
.github/skills/movefit-frontend/: SKILL.md
.github/skills/movefit-import/: SKILL.md
.github/skills/movefit-qa/: SKILL.md
.github/skills/repo-maintenance/: SKILL.md
.github/workflows/: ci.yml
docs/: api.md  design.md  roadmap.md
docs/frontend-react-vite-tailwind/: integration.md  overview.md  starter-checklist.md  vscode.md
movefit-ui/: index.html  package-lock.json  package.json
movefit-ui/src/: App.tsx  api.ts  styles.css
src/movefit/: __init__.py  db.py  importer.py  main.py  metrics.py  models.py
tests/: test_measurements_api.py  test_metrics.py
