[project]
authors = [{name = "Luis Alfredo López Gonzales", email = "lalgonzales@gmail.com"}]
dependencies = []
name = "movefit"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
movefit = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pandas = ">=3.0.1,<4"
openpyxl = ">=3.1.5,<4"
