[project]
authors = [{name = "Luis Alfredo López Gonzales", email = "lalgonzales@gmail.com"}]
dependencies = []
name = "movefit"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
movefit = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest -q"
api = "sh -c 'python -m uvicorn movefit.main:app --reload --host 0.0.0.0 --port 8000 > /tmp/movefit_api.log 2>&1'"
frontend = "sh -c 'cd movefit-ui && npm run dev > /tmp/movefit_frontend.log 2>&1'"
migrate = "python -m movefit.db"


[tool.pixi.dependencies]

pandas = ">=3.0.1,<4"
openpyxl = ">=3.1.5,<4"
fastapi = ">=0.135.1,<0.136"
sqlmodel = ">=0.0.37,<0.0.38"
uvicorn = ">=0.42.0,<0.43"
pytest = ">=9.0.2,<10"
hatchling = ">=1.29.0,<2"
ruff = ">=0.15.7,<0.16"
black = ">=26.1.0,<27"
pre-commit = ">=4.0.0,<5"
